# tuix

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  config.toml.example  main.cpp
.github/workflows/: ci.yml  release.yml
components/: actionbox.cpp  actionbox.hpp  body.cpp  body.hpp  calc_cache.cpp  calc_cache.hpp  cell.cpp  cell.hpp  cmd_mode.cpp  cmd_mode.hpp  col_label.hpp  column_stats.cpp  column_stats.hpp  file_bar.cpp  file_bar.hpp  formula_catalog.cpp  formula_catalog.hpp  grid.cpp  grid.hpp  grid_analytics.cpp  grid_edit.cpp  grid_input.cpp  grid_render.cpp  grid_search.cpp  grid_view.cpp  heatmap.cpp  heatmap.hpp  session.cpp  session.hpp  sheet.hpp  status_area.cpp  status_area.hpp  statusbar.cpp  statusbar.hpp  suggestion_bar.cpp  suggestion_bar.hpp  tab_bar.cpp  tab_bar.hpp  titlebar.cpp  titlebar.hpp  (+2 more)
config/: config.cpp  config.hpp  themes.cpp  themes.hpp
dialogs/: config_dialog.cpp  config_dialog.hpp  confirm_dialog.cpp  confirm_dialog.hpp  delete_sheet_confirm_dialog.cpp  delete_sheet_confirm_dialog.hpp  dialog_shell.cpp  dialog_shell.hpp  exit_dialog.cpp  exit_dialog.hpp  help_dialog.cpp  help_dialog.hpp  path_input_dialog.cpp  path_input_dialog.hpp  save_confirm_dialog.cpp  save_confirm_dialog.hpp  sheet_actions_dialog.cpp  sheet_actions_dialog.hpp
formulas/: ast.hpp  eval_context.hpp  evaluator.cpp  evaluator.hpp  evaluator_builtins.cpp  evaluator_builtins.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp  value.cpp  value.hpp
loader/: csv_loader.cpp  csv_loader.hpp  xlsx_loader.cpp  xlsx_loader.hpp
samples/csv/: employees.csv  people.csv  sales.csv  stocks.csv  temperatures.csv
samples/xlsx/: Free_Test_Data_100KB_XLSX.xlsx  multi.xlsx
tests/: CMakeLists.txt  doctest_main.cpp
tests/integration/: config_theme_test.cpp  cross_sheet_grid_test.cpp  sort_grid_test.cpp
tests/support/: fake_eval_context.hpp
tests/unit/: clipboard_test.cpp  cross_sheet_test.cpp  evaluator_test.cpp  lookup_functions_test.cpp  sparkline_test.cpp
util/: clipboard.cpp  clipboard.hpp  text_width.cpp  text_width.hpp
writer/: csv_writer.cpp  csv_writer.hpp  xlsx_writer.cpp  xlsx_writer.hpp
